# ocaml-from-the-very-beginning

./: .gitignore  docker-compose.yml  ocaml-from-the-very-beginning.opam
chapters/chapter_10/: solutions.ml  test.ml
chapters/chapter_11/: dune  printers.ml  solutions.ml
chapters/chapter_12/: dune  dune-project  read.ml  readfile.ml  solutions.ml  study.ml
chapters/chapter_13/: dune  solutions.ml
chapters/chapter_14/: printers.ml  solutions.ml
chapters/chapter_15/: solutions.ml
chapters/chapter_16/: .gitignore  README.md  fibonacci.ml  match.ml  reverse.ml  stats.ml  textstat.ml  textstat.mli
chapters/chapter_8/: solutions.ml  test.ml
chapters/chapter_9/: solutions.ml  test.ml
