(executable
 (name read)
 (modules read)
 (libraries core_kernel))

(library
 (name solutions)
 (modules solutions)
 (inline_tests)
 (preprocess
  (pps ppx_inline_test))
 (libraries core_kernel oUnit))

(alias
 (name read)
 (deps
  (:< read.exe))
 (action
  (run %{<})))

; https://github.com/ocaml/dune/pull/1484

(env
 (dev
  (flags
   (:standard -warn-error -A))))
