(executable
 (name read)
 (modules read)
 (libraries core_kernel))

(executable
 (name readfile)
 (modules readfile)
 (libraries core_kernel str))

(executable
 (name solutions)
 (modules solutions)
 (libraries core_kernel))

(alias
 (name read)
 (deps
  (:< read.exe))
 (action
  (run %{<})))

(alias
 (name readfile)
 (deps
  (:< readfile.exe))
 (action
  (run %{<})))

(alias
 (name solutions)
 (deps
  (:< solutions.exe)))

; https://github.com/ocaml/dune/pull/1484

(env
 (dev
  (flags
   (:standard -warn-error -A))))
